--- a/system/templates/actor/limited.hbs
+++ b/system/templates/actor/limited.hbs
@@ -3,7 +3,7 @@
 
         {{!--HEADER--}}
         <div class="desk__header">
-            {{> "systems/fatex/templates/actor/parts/header.html"}}
+            {{> "systems/fatex/templates/actor/parts/header.hbs"}}
         </div>
 
         <div class="desk__content">
@@ -16,20 +16,20 @@
                             {{!--Bio--}}
                             <div class="fatex__tabs__tab fatex__tabs__tab--bio">
                                 <div class="fatex__tabs__tab__content">
-                                    {{> "systems/fatex/templates/actor/parts/tabs/bio.html"}}
+                                    {{> "systems/fatex/templates/actor/parts/tabs/bio.hbs"}}
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="desk__copyright">
-                        {{> "systems/fatex/templates/actor/parts/copyright.html"}}
+                        {{> "systems/fatex/templates/actor/parts/copyright.hbs"}}
                     </div>
                 </div>
 
                 {{!--Sidebar--}}
                 <div class="desk__sidebar">
-                    {{> "systems/fatex/templates/actor/parts/sidebar/artwork.html"}}
+                    {{> "systems/fatex/templates/actor/parts/sidebar/artwork.hbs"}}
                 </div>
             </div>
         </div>
