--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -1,4 +1,4 @@
-{{> "systems/fatex/templates/apps/parts/layout/app-header.html"
+{{> "systems/fatex/templates/apps/parts/layout/app-header.hbs"
     title="FAx.Apps.Setup.Title"
 }}
 
@@ -6,7 +6,7 @@
     <div class="fatex__sheet_setup__manage">
         <h2>{{localize "FAx.Apps.Setup.Manage"}}</h2>
 
-        {{> "systems/fatex/templates/apps/parts/setup/actions.html" }}
+        {{> "systems/fatex/templates/apps/parts/setup/actions.hbs" }}
     </div>
 
     <div class="fatex__sheet_setup__setup">
@@ -73,4 +73,4 @@
     </div>
 </div>
 
-{{> "systems/fatex/templates/apps/parts/layout/app-footer.html"}}
+{{> "systems/fatex/templates/apps/parts/layout/app-footer.hbs"}}
