--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -10,12 +10,12 @@
 
         <div class="fatex__inline_sheet__content">
             <div class="fatex__inline_sheet__front">
-                {{> "systems/fatex/templates/inline-sheet/parts/aspects.html"}}
+                {{> "systems/fatex/templates/inline-sheet/parts/aspects.hbs"}}
             </div>
 
             <div class="fatex__inline_sheet__back">
-                {{> "systems/fatex/templates/inline-sheet/parts/consequences.html"}}
-                {{> "systems/fatex/templates/inline-sheet/parts/stress.html"}}
+                {{> "systems/fatex/templates/inline-sheet/parts/consequences.hbs"}}
+                {{> "systems/fatex/templates/inline-sheet/parts/stress.hbs"}}
             </div>
         </div>
     </div>
