--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -1,4 +1,4 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Consequence.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Consequence.EditItem" item=item}}
 
 <div class="fatex__settings">
     <div class="fatex__setting">
@@ -29,20 +29,20 @@
         </div>
     </div>
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Consequence.Value"
         fieldName = "data.value"
         field = data.value
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Consequence.Label"
         fieldName = "data.label"
         field = data.label
         help = "FAx.Item.Consequence.LabelHelp"
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Consequence.Icon"
         help = "FAx.Item.Consequence.IconHelp"
         fieldName = "data.icon"
@@ -50,7 +50,7 @@
     }}
 
     {{!--Description is disabled for now--}}
-    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Consequence.Description"
         help = "FAx.Item.Consequence.DescriptionHelp"
         fieldName = "data.description"
@@ -58,10 +58,10 @@
     }}--}}
 
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.hbs"
         headline = "FAx.Item.Automation.Headline"
     }}
 </div>
 
-{{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
+{{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
 
