--- a/system/templates/actor/group.hbs
+++ b/system/templates/actor/group.hbs
@@ -24,6 +24,11 @@
     <div class="fatex__actor_group__sheet__navigation">
         <a class="fatex__actor_group__sheet__navigation--front active" data-show="front"><i class="fas fa-theater-masks"></i></a>
         <a class="fatex__actor_group__sheet__navigation--back" data-show="back"><i class="fas fa-user-injured"></i></a>
-        <a class="fatex__actor_group__sheet__navigation--settings" data-show="settings"><i class="fas fa-cog"></i></a>
+
+        {{#if (data.groupType eq "manual")}}
+            <a class="fatex__actor_group__sheet__navigation--settings"><i class="fas fa-user-plus"></i></a>
+        {{/if}}
+
+        <a class="fatex__actor_group__sheet__navigation--settings"><i class="fas fa-cog"></i></a>
     </div>
 </div>
