--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -1,7 +1,7 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Stress.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Stress.EditItem" item=item}}
 
 <div class="fatex__settings">
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Stress.Name"
         field = item.name
         fieldName = "name"
@@ -68,21 +68,21 @@
         </label>
     </div>
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Stress.Description"
         help = "FAx.Item.Stress.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.hbs"
         headline = "FAx.Item.Automation.Headline"
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-automation-boxes.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-automation-boxes.hbs"
         headline = "FAx.Item.Automation.BoxesHeadline"
     }}
 </div>
 
-{{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
+{{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
 
