--- a/system/templates/item/tokenReference-sheet.hbs
+++ b/system/templates/item/tokenReference-sheet.hbs
@@ -1,25 +1,25 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Reference.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Reference.EditItem" item=item}}
 
 <div class="fatex__settings">
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Reference.Name"
         field = item.name
         fieldName = "name"
         placeholder = "FAx.Item.Reference.Name"
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
       headline = "FAx.Item.Reference.Scene"
       field = data.scene
       fieldName = "data.scene"
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Reference.ID"
         field = data.id
         fieldName = "data.id"
     }}
 </div>
 
-{{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
+{{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
 
