--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -8,7 +8,7 @@
 
     {{#each aspects as |aspect aspectIndex|}}
         <div class="fatex__aspect fatex__input fatex__sortable item" data-item-id="{{aspect._id}}">
-            <label class="fatex__aspect__label fatex__input__label">{{default aspect.data.label "&nbsp;"}}</label>
+            <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
 
             <div class="fatex__aspect__actions_wrapper">
                 <div class="fatex__aspect__input fatex__input__input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
