--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -11,7 +11,7 @@
             class="fatex__consequence fatex__input fatex__input--icon fatex__sortable item{{#if consequence.isCondition}} fatex__consequence--condition{{/if}}{{#if consequence.isDisabled}} fatex__helper--is-disabled{{/if}}"
             data-item-id="{{consequence._id}}"
         >
-            <label class="fatex__consequence__label fatex__input__label">{{default consequence.data.label "&nbsp;"}}</label>
+            <label class="fatex__consequence__label fatex__input__label">{{consequence.data.label}}</label>
 
             <div class="fatex__consequence__actions_wrapper">
                 <div class="fatex__consequence__input fatex__input__input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
