--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -17,10 +17,10 @@
                     data-index="{{reference.index}}"
                     data-field="skill"
                 >
-                    <option value=""{{#ifEquals reference.skill ''}} selected="selected"{{/ifEquals}}> -</option>
+                    <option value=""{{#if (eq reference.skill '')}} selected="selected"{{/if}}> -</option>
 
                     {{#each ../availableSkills as |skill skillIndex|}}
-                        <option value="{{skill}}"{{#ifEquals reference.skill skill}} selected="selected"{{/ifEquals}}>
+                        <option value="{{skill}}"{{#if (eq reference.skill skill)}} selected="selected"{{/if}}>
                             {{skill}}
                         </option>
                     {{/each}}
@@ -33,7 +33,7 @@
                     data-dtype="Number"
                 >
                     {{#each ../availableOperators as |operator|}}
-                        <option value="{{operator.value}}"{{#ifEquals reference.operator operator.value}} selected="selected"{{/ifEquals}}>
+                        <option value="{{operator.value}}"{{#if (eq reference.operator operator.value)}} selected="selected"{{/if}}>
                             {{operator.label}}
                         </option>
                     {{/each}}
@@ -46,7 +46,7 @@
                     data-dtype="Number"
                 >
                     {{#each ../availableSkillLevels as |skillLevel|}}
-                        <option value="{{skillLevel.value}}"{{#ifEquals reference.condition skillLevel.value}} selected="selected"{{/ifEquals}}>
+                        <option value="{{skillLevel.value}}"{{#if (eq reference.condition skillLevel.value)}} selected="selected"{{/if}}>
                             {{skillLevel.label}}
                         </option>
                     {{/each}}
