--- a/src/styles/components/artwork/artwork.scss
+++ b/src/styles/components/artwork/artwork.scss
@@ -11,7 +11,7 @@
     width: 100%;
     height: 200px;
     background-size: cover;
-    background-position: center center;
+    background-position: top center;
 
     @include cutoff(25px);
 }
