Adds a new handler for clicking stunt header items. This handler eventually calls a function to generate a chat message containing information for the clicked stunt.
Adds a new template for the new stunt chat output.

Updates the stunt component styles to indicate to users that the header section is now clickable.

--- a/src/styles/components/stunt/stunt.scss
+++ b/src/styles/components/stunt/stunt.scss
@@ -9,6 +9,7 @@
     padding: $component-padding 0;
 
     .fatex__headline {
+        cursor: pointer;
         padding-right: $component-padding * 4;
     }
 
