Adds the stunt desctiption data to the template, replacing the placeholder lorem text. Adds a new class and styles to provide addition padding for the stunt text in the chat output.

--- a/system/templates/chat/display-stunt.hbs
+++ b/system/templates/chat/display-stunt.hbs
@@ -5,5 +5,5 @@
         </div>
     </div>
 
-    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde? Dolore voluptatibus nam tempore numquam incidunt in beatae ad, quisquam non, eligendi reiciendis, perspiciatis autem tenetur accusantium officia error sit.</div>
+    <div class="fatex__chat__text">{{{ stunt.data.description }}}</div>
 </div>
