Reorganises the SCSS files to provide a better framework for future refinements.

--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -52,3 +52,7 @@
     font-family: "Fate Icons";
     src: url("/systems/fatex/assets/fonts/fate_icons.ttf");
 }
+
+#chat-log {
+    font-family: $primary-font, sans-serif;
+}
