Updates the templates to use the new padding utility class.

--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__aspects">
+<div class="u-padding-std">
     <h2 class="fatex__aspects__headline fatex__headline">
         <span>{{localize "FAx.Sheet.Aspects"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
