--- a/system/templates/actor/parts/tabloid/consequences.hbs
+++ b/system/templates/actor/parts/tabloid/consequences.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__consequences">
+<div class="u-padding-std">
     <h2 class="fatex__consequences__headline fatex__headline">
         <span>{{localize "FAx.Sheet.Consequences"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
