--- a/system/templates/inline-sheet/parts/aspects.hbs
+++ b/system/templates/inline-sheet/parts/aspects.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__aspects">
+<div class="u-padding-std">
     {{#each aspects as |aspect aspectIndex|}}
         <div class="fatex__aspect fatex__input fatex__sortable item" data-item-id="{{aspect._id}}">
             <div class="fatex__aspect__actions_wrapper">
