--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__stress">
+<div class="u-padding-std">
     {{#each stress as |stress stressIndex|}}
         <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}} item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
             <h2 class="fatex__headline fatex__sortable" data-item-id="{{stress._id}}">
