Creates a new fatex-headline class and updates the templates to use the new naming pattern.

--- a/src/styles/components/extra/extra.scss
+++ b/src/styles/components/extra/extra.scss
@@ -7,7 +7,7 @@
     width: 100%;
     padding: $component-padding;
 
-    .fatex__headline {
+    .fatex-headline {
         padding-right: $component-padding * 4;
     }
 
