--- a/src/styles/components/stunt/stunt.scss
+++ b/src/styles/components/stunt/stunt.scss
@@ -5,7 +5,7 @@
 .fatex__stunt {
     padding: $component-padding 0;
 
-    .fatex__headline {
+    .fatex-headline {
         padding-right: $component-padding * 4;
     }
 
