--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -9,7 +9,7 @@
 
     {{#each stunts as |stunt stuntIndex|}}
         <div class="fatex__stunt item {{#if stunt.data.collapsed}}fatex__stunt__collapsed{{/if}}" data-item-id="{{stunt._id}}">
-            <h2 class="fatex__headline fatex__sortable" data-item-id="{{stunt._id}}">
+            <h2 class="fatex-headline fatex__sortable" data-item-id="{{stunt._id}}">
                 <span>{{stunt.name}}</span>
 
                 <div class="fatex__headline__actions fatex__item__actions">
