--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -26,7 +26,7 @@
 
                             {{#each system.types as |type typeLabel|}}
                                 <div class="fatex__sheet_setup__type">
-                                    <div class="fatex__headline">
+                                    <div class="fatex-headline">
                                         {{typeLabel}}
 
                                         <div class="fatex__headline__actions">
