--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -14,7 +14,7 @@
 <div class="fatex__templates">
 
     <div class="fatex__template">
-        <div class="fatex__headline">
+        <div class="fatex-headline">
             <span>{{localize "FAx.Template.Picker.Empty"}}</span>
         </div>
 
@@ -53,7 +53,7 @@
 
     {{#each templateActors as |template templateIndex|}}
         <div class="fatex__template">
-            <div class="fatex__headline">
+            <div class="fatex-headline">
                 <span>{{ template.name }}</span>
             </div>
 
