--- a/system/templates/apps/template-actors.hbs
+++ b/system/templates/apps/template-actors.hbs
@@ -14,7 +14,7 @@
 <div class="fatex__templates">
     {{#each templateActors as |template templateIndex|}}
         <div class="fatex__template">
-            <div class="fatex__headline">
+            <div class="fatex-headline">
                 <span>{{ template.name }}</span>
             </div>
 
