--- a/system/templates/chat/roll-skill.hbs
+++ b/system/templates/chat/roll-skill.hbs
@@ -1,6 +1,6 @@
 <div class="fatex__chat">
     <div class="fatex__chat__headline__wrapper">
-        <div class="fatex__chat__headline fatex__headline fatex__headline--icon fatex__headline--center">
+        <div class="fatex__chat__headline fatex-headline fatex__headline--icon fatex__headline--center">
             {{ skill.name }}
         </div>
 
