--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -9,7 +9,7 @@
     }}
 
     <div class="fatex__setting">
-        <h2 class="fatex__headline">
+        <h2 class="fatex-headline">
             <span>{{localize "FAx.Item.Stress.Size"}}</span>
         </h2>
 
@@ -20,7 +20,7 @@
     </div>
 
     <div class="fatex__setting">
-        <h2 class="fatex__headline fatex__setting__headline">
+        <h2 class="fatex-headline fatex__setting__headline">
             <span>{{localize "FAx.Item.Stress.Boxes.Label"}}</span>
         </h2>
 
@@ -58,7 +58,7 @@
     </div>
 
     <div class="fatex__setting{{#if (ne 2 data.labelType)}} fatex__setting--disabled{{/if}}">
-        <h2 class="fatex__headline fatex__setting__headline">
+        <h2 class="fatex-headline fatex__setting__headline">
             <span>{{localize "FAx.Item.Stress.Boxes.Custom"}}</span>
         </h2>
 
