--- a/system/templates/actor/parts/sidebar/artwork.hbs
+++ b/system/templates/actor/parts/sidebar/artwork.hbs
@@ -5,7 +5,7 @@
         }
     </style>
 
-    <h2 class="fatex__aspects__headline fatex__headline">
+    <h2 class="fatex__aspects__headline fatex-headline">
         <span>{{localize "FAx.Sheet.Artwork"}}</span>
     </h2>
 
