--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -19,7 +19,7 @@
             <div class="fatex__skill fatex__input fatex__input--icon fatex__sortable item" data-item-id="{{skill._id}}">
 
                 <div class="fatex__skill__actions_wrapper">
-                    <div class="fatex__skill__input fatex__headline">{{skill.name}}</div>
+                    <div class="fatex__skill__input fatex-headline">{{skill.name}}</div>
 
                     {{#unless skill.data.isNeutral}}
                         <label
