--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -1,5 +1,5 @@
 <div class="fatex__automation fatex__setting fatex__setting--min-height">
-    <h2 class="fatex__headline fatex__setting__headline">
+    <h2 class="fatex-headline fatex__setting__headline">
         <span>{{localize headline}}</span>
 
         <div class="fatex__headline__actions fatex__setting__actions">
