--- a/system/templates/item/parts/settings/setting-editor.hbs
+++ b/system/templates/item/parts/settings/setting-editor.hbs
@@ -1,5 +1,5 @@
 <div class="fatex__setting">
-    <h2 class="fatex__headline fatex__setting__headline">
+    <h2 class="fatex-headline fatex__setting__headline">
         <span>{{localize headline}}</span>
     </h2>
 
