Removes additional unnecessary heading classes.

--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -2,7 +2,7 @@
 
 <div class="fatex__settings">
     <div class="fatex__setting">
-        <h2 class="fatex-headline fatex__setting__headline">
+        <h2 class="fatex-headline">
             <span>{{localize "FAx.Item.Consequence.Type.Label"}}</span>
         </h2>
 
