--- a/system/templates/item/parts/settings/setting-text.hbs
+++ b/system/templates/item/parts/settings/setting-text.hbs
@@ -1,5 +1,5 @@
 <div class="fatex__setting">
-    <h2 class="fatex-headline fatex__setting__headline">
+    <h2 class="fatex-headline ">
         <span>{{localize headline}}</span>
     </h2>
 
