--- a/system/templates/actor/parts/tabloid/consequences.hbs
+++ b/system/templates/actor/parts/tabloid/consequences.hbs
@@ -1,5 +1,5 @@
 <div class="u-padding-std">
-    <h2 class="fatex__consequences__headline fatex-headline">
+    <h2 class="fatex-headline">
         <span>{{localize "FAx.Sheet.Consequences"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
             <span class="fatex__item__add fatex__consequence__add"></span>
